--- a/src/index.css
+++ b/src/index.css
@@ -5,5 +5,10 @@
 body {
   background-color: #212121;
   color: white;
-  padding: 1rem;
+  margin: 0;
+  padding: 0;
+}
+a {
+  text-decoration: none;
+  color: rgb(171, 89, 180);
 }
